# document-lens

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  README.md  TAURI-MIGRATION-PLAN.md  electron-builder.yml  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  start.sh  tailwind.config.cjs  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  tauri.yml
app/: main.py
app/core/: config.py
app/services/: document_processor.py
docs/: CNAME  app.js  index.html  styles.css
docs/adr/: 0000-adr-template.md  0001-offline-first-embedded-backend.md  0002-backend-lifecycle.md  0003-lens-family-always-latest.md  0004-greenfield-database.md  0005-multi-axis-tag-model.md  0006-polarity-in-one-list.md  0007-embedding-classification.md  0008-wedding-cake-scoring.md  0009-two-axis-matrix.md  0010-tone-substance-gap.md  0011-substance-signals.md  0012-focus-auto-research-mode.md  0013-docx-report-format-not-mode.md  0014-byok-ai-architecture.md  0015-ipc-security-boundary.md  0016-first-run-seeding.md  0017-v2-greenfield-renderer.md  0018-terminology-as-decision.md  0019-architecture-deepening-seam.md  0020-extraction-markitdown-per-page.md  0021-pdf-viewer-iframe-pdfium.md  0022-cpu-only-torch-linux.md  0023-release-pipeline.md  0024-backend-family-contract.md  0025-optional-ml-extras.md  0026-fail-loudly-not-silently.md  0027-image-text-extraction-boundary.md  0028-synthetic-test-corpus.md  0029-focus-first-hub.md  README.md  SUMMARY.md
docs/design/: focus-auto-research-mode.md  information-architecture.md  traceability.md  user-stories.md
document_analyser/: cli.py  main.py
document_analyser/analyzers/: domain_mapper.py  integrity_checker.py  keyword_analyzer.py  ner_analyzer.py  ngram_analyzer.py  readability.py  sentiment_analyzer.py  structural_mismatch.py  word_analysis.py  writing_quality.py
document_analyser/core/: config.py
document_analyser/services/: document_processor.py
e2e/: README.md  corpus.spec.ts  fixtures.ts  happy-path.spec.ts  smoke.spec.ts
electron/: ai-providers.ts  backend-manager.ts  database.ts  fs-guard.ts  main.ts  menu.ts  preload.ts  queries.ts  schema.ts
manual/: build-manual.sh
public/docs/: collaboration.md  keyword-methodology.md  quick-reference.md  user-guide.md
samples/test-corpus/: README.md  corpus-manifest.json
scripts/: build-test-corpus.mjs  capture-help-screenshots.mjs  export-help-docs.tsx  gen-rust-db.mjs  notarize.js  tauri.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend.rs  db.rs  db_generated.rs  fs_guard.rs  lib.rs  main.rs  menu.rs  platform.rs
src/components/: AddFromLibraryDialog.tsx  AiObservationsPanel.tsx  DocumentAnalysisPanel.tsx  DocumentFilter.tsx  DocumentTable.tsx  EmptyState.tsx  ExportOptionsModal.tsx  HelpButton.tsx  HierarchicalKeywordViewer.tsx  ImportBundleDialog.tsx  ImportProgressDialog.tsx  InlineEditableCell.tsx  KeywordListViewer.tsx  KeywordPicker.tsx  KeywordSelector.tsx  Layout.tsx  Loading.tsx  PlaceholderPage.tsx  ProfileEditor.tsx  ProfileSelector.tsx  ProjectContextBar.tsx  Toaster.tsx  UpdateNotification.tsx  WelcomeDialog.tsx
src/config/: backend.ts
src/data/: focuses.ts  (+2 more)
test-data/: sample.docx
tests/: conftest.py  test_files.py  test_semantic_analysis.py
(+180 files in other folders)
