[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "document-analyser"
version = "0.1.0"
description = "Multi-modal document analysis microservice — extracts text, readability, and structure from PDFs, DOCX, and more"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Michael Borck", email = "michael.borck@curtin.edu.au" }]
keywords = ["document", "analysis", "nlp", "pdf", "fastapi", "lens"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pdfplumber>=0.10.3",
    "markitdown[docx,pptx,xlsx]>=0.1.0",
    "textstat>=0.7.3",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.26.0",
]

[project.scripts]
document-analyser = "document_analyser.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["document_analyser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
