[package]
name = "document-lens"
version = "0.29.0"
description = "Document Lens desktop shell (Tauri)"
authors = ["Michael Borck"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

# The library the binary links against. Phase 0 keeps everything in one crate;
# later phases (db, fs, backend supervisor, ai fold) grow modules under src/.
[lib]
name = "document_lens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
# Smaller binary — the whole point of this migration.
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
