[package]
name = "document-lens"
version = "0.31.0"
description = "Document Lens desktop shell (Tauri)"
authors = ["Michael Borck"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

# The library the binary links against. Phase 0 keeps everything in one crate;
# later phases (db, fs, backend supervisor, ai fold) grow modules under src/.
[lib]
name = "document_lens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# bundled = compile SQLite from source (no system dependency) — matches the
# self-contained better-sqlite3 the Electron path used.
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
getrandom = "0.2"
tokio = { version = "1", features = ["process", "net", "io-util", "time", "rt", "macros", "signal"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
# Smaller binary — the whole point of this migration.
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
